Bug 230750 - [iwm]: ifconfig wlan0 list chan output inconsistent between boots
Summary: [iwm]: ifconfig wlan0 list chan output inconsistent between boots
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: wireless (show other bugs)
Version: CURRENT
Hardware: amd64 Any
: --- Affects Only Me
Assignee: freebsd-wireless (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-19 14:12 UTC by Ciarán
Modified: 2019-03-15 07:38 UTC (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ciarán 2018-08-19 14:12:05 UTC
Executing the following results in inconsistent channel listings between boots.
ifconfig wlan0 list chan

Typically channels 10 and 11 are listed and a scan is unable to detect a base station is on channel 1.

Below are the relevant configurations.

/boot/loader.conf
if_iwm_load=“YES”
iwm3168fw_load=“YES”

/etc/rc/conf
wlans_iwm0=“wlan0”
ifconfig_wlan-=“WPA DHCP country AU”
Comment 1 commit-hook freebsd_committer freebsd_triage 2019-03-11 08:30:35 UTC
A commit references this bug:

Author: avos
Date: Mon Mar 11 08:30:30 UTC 2019
New revision: 345002
URL: https://svnweb.freebsd.org/changeset/base/345002

Log:
  iwm(4): use correct channel list source for Intel 3168

  Intel 3168 uses another EEPROM section to store channel flags;
  port missing bits from iwlwifi to make it work.

  PR:		230750, 236235
  Tested by:	Bert JW Regeer <xistence@0x58.com>
  MFC after:	3 days

Changes:
  head/sys/dev/iwm/if_iwm.c
  head/sys/dev/iwm/if_iwm_7000.c
  head/sys/dev/iwm/if_iwm_config.h
  head/sys/dev/iwm/if_iwmreg.h
Comment 2 commit-hook freebsd_committer freebsd_triage 2019-03-15 07:34:59 UTC
A commit references this bug:

Author: avos
Date: Fri Mar 15 07:34:07 UTC 2019
New revision: 345172
URL: https://svnweb.freebsd.org/changeset/base/345172

Log:
  MFC r345002:
  iwm(4): use correct channel list source for Intel 3168

  Intel 3168 uses another EEPROM section to store channel flags;
  port missing bits from iwlwifi to make it work.

  PR:		230750, 236235
  Tested by:	Bert JW Regeer <xistence@0x58.com>

Changes:
_U  stable/12/
  stable/12/sys/dev/iwm/if_iwm.c
  stable/12/sys/dev/iwm/if_iwm_7000.c
  stable/12/sys/dev/iwm/if_iwm_config.h
  stable/12/sys/dev/iwm/if_iwmreg.h
Comment 3 Andriy Voskoboinyk freebsd_committer freebsd_triage 2019-03-15 07:38:46 UTC
Should be fixed now.